@@ -1,4 +1,4 @@
-VERSION=1.26
+VERSION=1.27
 PYTHON=python
 
 test:
