@@ -1,3 +1,8 @@
+2014/02/06 (version 1.27)
+
+- Better handling of unknown database contents.
+
+
 2014/02/05 (version 1.26)
 
 - Search now searches within the whole description, not only stripped-out
